# rustypy_demo

./: .gitignore  Cargo.toml  README.md  demo.py  lib.rs  presentation.md  pyproject.toml  serve.py  server_fastapi.py  uv_rust_python_guide.md
