[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rust_demo"
version = "0.1.0"
description = "Demo: Rust extension for Python using PyO3 and Maturin"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.1",
    "uvicorn>=0.39.0",
]

[project.optional-dependencies]
dev = ["pytest", "ipython", "ruff"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]

[tool.maturin]
features = ["pyo3/extension-module"]

# Tell uv to rebuild when Rust source changes
[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" }
]
